# lolida

./: .gitignore  LICENSE  PROGRESS.md  README.md  SECURITY.md  package.json
admin/: package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
admin/src/lib/: api.ts  utils.ts
admin/src/pages/: FeedbackPage.tsx  LoginPage.tsx  SchemesPage.tsx  StatsPage.tsx
desktop/: package-lock.json  package.json  vite.config.ts
desktop/electron/: main.js  preload.js
desktop/src/: App.tsx  index.css
desktop/src/components/: FeedbackModal.tsx
desktop/src/lib/: api.ts  utils.ts
desktop/src/types/: electron.d.ts
docs/: GITHUB_PUBLISH.md
server/: .env.example  .vercelignore  Dockerfile  pyproject.toml  sync_env.py  vercel.json
server/api/: index.py  requirements.txt
server/app/: ai_client.py  config.py  database.py  image_utils.py  main.py  models.py  schemas.py  scheme_parser.py  scheme_prompts.py  seed.py
server/app/routers/: __init__.py  admin.py  feedback.py  generate.py  schemes.py  software.py  stats.py
