[project]
name = "lolida-server"
version = "1.0.0"
description = "萝莉dao 后端服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "aiofiles>=24.1.0",
    "psycopg2-binary>=2.9.10",
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.uv]
dev-dependencies = []
